fix: times for soon leaving departures aligned incorrectly on StopPage

--- a/app/component/stop.scss
+++ b/app/component/stop.scss
@@ -312,7 +312,6 @@
         padding-right: 8px;
         padding-left: 8px;
         position: relative;
-        top: -3px;
         span {
           vertical-align: sub;
         }
@@ -344,6 +343,7 @@
       }
       .time-cell {
         display: flex;
+        align-items: center;
         flex-wrap: wrap;
         max-width: 100px;
       }
